overflow-x added to body element to fix mobile responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,11 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 .nav-bar-container{
